kubernetes_manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fast-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fast-api-application
  template:
    metadata:
      labels:
        app: fast-api-application
    spec:
      containers:
      - name: ml-devops-dida-task
        image: ghcr.io/jahednaghipoor/ml-devops-dida-task:main-latest
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "1"
            memory: "1Gi"
          requests:
            cpu: "1"
            memory: "1Gi"
        restartPolicy: Never
