kubernetes_manifests/original-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dida-mlops-deployment
  namespace: dida-mlops
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dida-mlops-application
      model: original
  template:
    metadata:
      labels:
        app: dida-mlops-application
        model: original
    spec:
      containers:
      - name: dida-mlops-app-container-original
        image: ghcr.io/jahednaghipoor/ml-devops-dida-task:main-v2 # image and its version
        command:
          - sh
          - -c
          - python src/ml_devops_dida_task/main.py # run and deploy original model - facebook/bart-large-mnli (75% traffic)
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "1"
            memory: "4Gi"
          requests:
            cpu: "1"
            memory: "4Gi"
