kubernetes_manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dida-mlops-service
  namespace: dida-mlops
spec:
  selector:
    app: dida-mlops-application
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
