kubernetes_manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dida-mlops-ingress
  namespace: dida-mlops-test
spec:
  rules:
  - host: dida-mlops.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: dida-mlops-service
            port:
              number: 80
